--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,8 +4,17 @@
     box-sizing: border-box;
 }
 
+:root {
+    --bs-blue: #0d6efd;
+    --ms-background: #ddc8dd;
+}
+
+body {
+    background-color: var(--ms-background);
+}
+
 #page {
-    background-color: #ddc8dd;
+    overflow-y: auto;
     width: 100vw;
     height: 100vh;
 }
