--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,12 @@
 :root {
     --bs-blue: #0d6efd;
     --ms-background: #ddc8dd;
+    --title-pet-clr: #223722;
+    --card-bg-clr: #d4ecf4;
+}
+
+.lime {
+    color: var(--title-pet-clr);
 }
 
 body {
@@ -19,7 +25,23 @@ body {
     height: 100vh;
 }
 
+#title {
+    color: var(--bs-blue);
+    text-shadow: 1px 2px black;
+    margin: 25px 0;
+}
+
 h1 {
     color:red;
     text-align: center;
+}
+
+.ms-card{
+    background-color: var(--card-bg-clr);
+    cursor: pointer;
+    width: calc(100% / 2 - 30px);
+}
+
+.ms-card:hover {
+    border: 1px solid grey;
 }
